--- a/templates/Beverages.html
+++ b/templates/Beverages.html
@@ -255,7 +255,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MineralWaterQTY" placeholder="Quantity">
@@ -282,7 +282,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChaiQTY" placeholder="Quantity">
@@ -305,7 +305,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CocaColaQTY" placeholder="Quantity">
@@ -329,7 +329,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "SpriteQTY" placeholder="Quantity">
@@ -353,7 +353,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ThumsUpQTY" placeholder="Quantity">
@@ -377,7 +377,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "LimcaQTY" placeholder="Quantity">
@@ -400,7 +400,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "IceTeaLemonQTY" placeholder="Quantity">
@@ -423,7 +423,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "IceTeaPeachQTY" placeholder="Quantity">
@@ -447,7 +447,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "VirginMojitoQTY" placeholder="Quantity">
@@ -471,7 +471,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BlueLagoonQTY" placeholder="Quantity">
@@ -496,7 +496,7 @@ html {
                     <strong>{{ error_11 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PinkLadyQTY" placeholder="Quantity">
@@ -521,7 +521,7 @@ html {
                     <strong>{{ error_12 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Beverages')}}" method="POST">    
+                <form action="{{ url_for('Beverages')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "SpicyGuavaQTY" placeholder="Quantity">
