--- a/templates/Breads.html
+++ b/templates/Breads.html
@@ -260,7 +260,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PlainRotiQTY" placeholder="Quantity">
@@ -287,7 +287,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ButterRotiQTY" placeholder="Quantity">
@@ -310,7 +310,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MissiRotiQTY" placeholder="Quantity">
@@ -334,7 +334,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "RumaliRotiQTY" placeholder="Quantity">
@@ -358,7 +358,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text  name = "ButterRumaliRotiQTY" placeholder="Quantity">
@@ -382,7 +382,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PlainNaanQTY" placeholder="Quantity">
@@ -405,7 +405,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ButterNaanQTY" placeholder="Quantity">
@@ -428,7 +428,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "GarlicNaanQTY" placeholder="Quantity">
@@ -452,7 +452,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "LachhaParanthaQTY" placeholder="Quantity">
@@ -476,7 +476,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PudinaParanthaQTY" placeholder="Quantity">
@@ -501,7 +501,7 @@ html {
                     <strong>{{ error_11 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CheeseNaanGravyQTY" placeholder="Quantity">
@@ -526,7 +526,7 @@ html {
                     <strong>{{ error_12 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Breads')}}" method="POST">    
+                <form action="{{ url_for('Breads')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "KeemaNaanGravyQTY" placeholder="Quantity">
