--- a/templates/Cart.html
+++ b/templates/Cart.html
@@ -14,36 +14,36 @@
                     ,url(https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)no-repeat;
                 background-size: cover;
             }
-.box{
-    width: 1000px;
-    float: right;
-    border: 1px solid black none;
-    
-
-}
-
-.box ul li{
-    width: 180px;
-    float: left;
-    margin: 10px;
-    text-align: center;
-}
-
-.box ul li a{
-    text-decoration: none;
-    color: gainsboro;
-    font-size: 25px;
-}
-
-.box ul li:hover{
-    background-color: green;
-}
-
-.box ul li a:hover{
-    color: white;
-    font-size: 25px;
-}
-
+            .box{
+                width: 1000px;
+                float: right;
+                border: 1px solid black none;
+                
+            
+            }
+            
+            .box ul li{
+                width: 180px;
+                float: left;
+                margin: 10px auto;
+                text-align: center;
+            }
+            
+            .box ul li a{
+                text-decoration: none;
+                color: gainsboro;
+                font-size: 15px;
+            }
+            
+            .box ul li:hover{
+                background-color: green;
+            }
+            
+            .box ul li a:hover{
+                color: white;
+                font-size: 18px;
+            }
+            
 .container row{
     width: 80%;
 
