--- a/templates/NoOrders.html
+++ b/templates/NoOrders.html
@@ -121,10 +121,10 @@
         <div class="wd">
             
             <!-- <h1> Welcome, {{ session.fullname }}! </h1> -->
-            <h1>FOOD CART EMPTY</h1>
+            <h1>OOPS, LOOK LIKE YOU'RE NEW HERE.</h1>
 
-            <h4 style="position: absolute; left: 30%;"></h4>
-            <br><br><br>
+            <h4 style="position: absolute; left: 30%;">No previous Orders</h4>
+            <br><br><br><br><br><br><br><br>
             <h2>Please proceed to the menu</h2>
             <div class="opt">
                 <form action = "" method = "POST">
