--- a/templates/NonVegMainCourse.html
+++ b/templates/NonVegMainCourse.html
@@ -259,7 +259,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CreamChickenQTY" placeholder="Quantity">
@@ -286,7 +286,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ButterChickenQTY" placeholder="Quantity">
@@ -309,7 +309,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ButterChickenBonelessQTY" placeholder="Quantity">
@@ -333,7 +333,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "KadhaiChickenQTY" placeholder="Quantity">
@@ -357,7 +357,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenTikkaMasalaQTY" placeholder="Quantity">
@@ -381,7 +381,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenKaliMirchQTY" placeholder="Quantity">
@@ -404,7 +404,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenCurryQTY" placeholder="Quantity">
@@ -427,7 +427,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST"  autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MuttonCurryQTY" placeholder="Quantity">
@@ -451,7 +451,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MuttonRaraQTY" placeholder="Quantity">
@@ -475,7 +475,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "RoganJoshQTY" placeholder="Quantity">
@@ -500,7 +500,7 @@ html {
                     <strong>{{ error_11 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "KeemaMutterQTY" placeholder="Quantity">
@@ -525,7 +525,7 @@ html {
                     <strong>{{ error_12 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegMainCourse')}}" method="POST">    
+                <form action="{{ url_for('NonVegMainCourse')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "EggCurryQTY" placeholder="Quantity">
