--- a/templates/NonVegPizza.html
+++ b/templates/NonVegPizza.html
@@ -261,7 +261,7 @@ html {
                 
                 </p>
                 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PepperBarBCueQTY" placeholder="Quantity">
@@ -288,7 +288,7 @@ html {
                 
                 </p>
 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenSausageQTY" placeholder="Quantity">
@@ -310,7 +310,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenGoldenDelightQTY" placeholder="Quantity">
@@ -333,7 +333,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenDominatorQTY" placeholder="Quantity">
@@ -357,7 +357,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "IndiChickenTikkaQTY" placeholder="Quantity">
@@ -381,7 +381,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenFiestaQTY" placeholder="Quantity">
@@ -403,7 +403,7 @@ html {
                     <br>
                     <strong>{{ error_7 }}</strong>
                 </p>
-                <form action="{{ url_for('NonVegPizza')}}" method="POST">    
+                <form action="{{ url_for('NonVegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "NonVegSupremeQTY" placeholder="Quantity">
