--- a/templates/NonVegSnacks.html
+++ b/templates/NonVegSnacks.html
@@ -262,7 +262,7 @@ html {
                 
                 </p>
                 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChillyChickenQTY" placeholder="Quantity">
@@ -289,7 +289,7 @@ html {
                 
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "Chicken65QTY" placeholder="Quantity">
@@ -311,7 +311,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenManchurianQTY" placeholder="Quantity">
@@ -334,7 +334,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenGarlicQTY" placeholder="Quantity">
@@ -358,7 +358,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "LemonChickenQTY" placeholder="Quantity">
@@ -382,7 +382,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CrispyNonVegQTY" placeholder="Quantity">
@@ -404,7 +404,7 @@ html {
                     <br>
                     <strong>{{ error_7 }}</strong>
                 </p>
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BarBCueQTY" placeholder="Quantity">
@@ -426,7 +426,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "FishFingersQTY" placeholder="Quantity">
@@ -450,7 +450,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "FishTikkaQTY" placeholder="Quantity">
@@ -473,7 +473,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('NonVegSnacks')}}" method="POST">    
+                <form action="{{ url_for('NonVegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "GarlicFishQTY" placeholder="Quantity">
