--- a/templates/Soups.html
+++ b/templates/Soups.html
@@ -260,7 +260,7 @@ html {
                 </p>
                 
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "TomatoSoupQTY" placeholder="Quantity">
@@ -289,7 +289,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "SpinachSoupQTY" placeholder="Quantity">
@@ -312,7 +312,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "RiceWaterSoupQTY" placeholder="Quantity">
@@ -335,7 +335,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CreamAndCornSoupQTY" placeholder="Quantity">
@@ -359,7 +359,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CarrotSoupQTY" placeholder="Quantity">
@@ -383,7 +383,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ManchowSoupQTY" placeholder="Quantity">
@@ -406,7 +406,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Soups')}}" method="POST">    
+                <form action="{{ url_for('Soups')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "TomatoAndCornSoupQTY" placeholder="Quantity">
