--- a/templates/SoyaSpecials.html
+++ b/templates/SoyaSpecials.html
@@ -259,7 +259,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text"  class = card-text name = "ChaampTikkaQTY" placeholder="Quantity">
@@ -285,7 +285,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "AchariChaampQTY" placeholder="Quantity">
@@ -307,7 +307,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "IraniChaampQTY" placeholder="Quantity">
@@ -333,7 +333,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PudinaChaampQTY" placeholder="Quantity">
@@ -356,7 +356,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CreamyChaampQTY" placeholder="Quantity">
@@ -381,7 +381,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PlatterQTY" placeholder="Quantity">
@@ -405,7 +405,7 @@ html {
                 </p>
                 
 
-                <form action="{{ url_for('SoyaSpecials')}}" method="POST">    
+                <form action="{{ url_for('SoyaSpecials')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "StuffedChaampQTY" placeholder="Quantity">
