--- a/templates/VegPizza.html
+++ b/templates/VegPizza.html
@@ -260,7 +260,7 @@ html {
                 
                 </p>
                 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MarghertiaQTY" placeholder="Quantity">
@@ -287,7 +287,7 @@ html {
                 
                 </p>
 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "DoubleCheeseMargheritaQTY" placeholder="Quantity">
@@ -309,7 +309,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "FarmHouseQTY" placeholder="Quantity">
@@ -332,7 +332,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PeppyPaneerQTY" placeholder="Quantity">
@@ -356,7 +356,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "DeluxeVeggieQTY" placeholder="Quantity">
@@ -380,7 +380,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PaneerMakhniQTY" placeholder="Quantity">
@@ -402,7 +402,7 @@ html {
                     <br>
                     <strong>{{ error_7 }}</strong>
                 </p>
-                <form action="{{ url_for('VegPizza')}}" method="POST">    
+                <form action="{{ url_for('VegPizza')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "TandooriPaneerQTY" placeholder="Quantity">
