--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -112,7 +112,7 @@
             <ul type="none">
                 <li><a href = "{{ url_for('mainpage') }}">Home</a></li>
                 <li><a href = "{{ url_for('SoyaSpecials') }}">Menu</a></li>
-                <li><a href = "{{ url_for('Cart') }}">Cart({{ items_count }})</a></li>
+                <li><a href = "{{ url_for('Cart') }}">Cart</a></li>
                 <li><a href = "{{ url_for('PreviousOrders') }}">Previous Orders</a></li>
                 <li><a href = "{{ url_for('logout') }}">Logout</a></li>
             </ul>
