--- a/templates/MilkShakes.html
+++ b/templates/MilkShakes.html
@@ -258,7 +258,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CaramelOreoQTY" placeholder="Quantity">
@@ -285,7 +285,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChocolateOreoQTY" placeholder="Quantity">
@@ -308,7 +308,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CoffeeOreoQTY" placeholder="Quantity">
@@ -332,7 +332,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CoffeeHazelnutQTY" placeholder="Quantity">
@@ -356,7 +356,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PeanutButterNutellaQTY" placeholder="Quantity">
@@ -380,7 +380,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "RedVelvetQTY" placeholder="Quantity">
@@ -403,7 +403,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BlackChocolateForestQTY" placeholder="Quantity">
@@ -426,7 +426,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BubbleGumQTY" placeholder="Quantity">
@@ -450,7 +450,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BlackCurrantQTY" placeholder="Quantity">
@@ -474,7 +474,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "AllBerryQTY" placeholder="Quantity">
@@ -499,7 +499,7 @@ html {
                     <strong>{{ error_11 }}</strong>
                 </p>
 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "VanillaCaramelQTY" placeholder="Quantity">
@@ -524,7 +524,7 @@ html {
                     <strong>{{ error_12 }}</strong>
                 </p>
 
-                <form action="{{ url_for('MilkShakes')}}" method="POST">    
+                <form action="{{ url_for('MilkShakes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "TheChocolateMudPotQTY" placeholder="Quantity">
