--- a/templates/Rice.html
+++ b/templates/Rice.html
@@ -262,7 +262,7 @@ html {
                 </p>
                 
                 
-                <form action="{{ url_for('Rice')}}" method="POST">    
+                <form action="{{ url_for('Rice')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "VegBiryaniGravyQTY" placeholder="Quantity">
@@ -291,7 +291,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Rice')}}" method="POST">    
+                <form action="{{ url_for('Rice')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChickenBiryaniGravyQTY" placeholder="Quantity">
@@ -314,7 +314,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Rice')}}" method="POST">    
+                <form action="{{ url_for('Rice')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MuttonBiryaniGravyQTY" placeholder="Quantity">
@@ -337,7 +337,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Rice')}}" method="POST">    
+                <form action="{{ url_for('Rice')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CheesePulaoGravyQTY" placeholder="Quantity">
@@ -361,7 +361,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Rice')}}" method="POST">    
+                <form action="{{ url_for('Rice')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PlainRiceQTY" placeholder="Quantity">
