--- a/templates/Sundaes.html
+++ b/templates/Sundaes.html
@@ -212,6 +212,7 @@ html {
   }
 }
 
+
     </style>
 
     
@@ -286,7 +287,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Sundaes')}}" method="POST">    
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "OreoSundaeQTY" placeholder="Quantity">
@@ -309,7 +310,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Sundaes')}}" method="POST">    
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChocolateBrownieSundaeQTY" placeholder="Quantity">
@@ -333,7 +334,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Sundaes')}}" method="POST">    
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "BananaSplitSundaeQTY" placeholder="Quantity">
@@ -357,7 +358,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Sundaes')}}" method="POST">    
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "CaramelCornSundaeQTY" placeholder="Quantity">
@@ -381,7 +382,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('Sundaes')}}" method="POST">    
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChocolateFudgeSundaeQTY" placeholder="Quantity">
@@ -404,7 +405,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('Sundaes')}}" method="POST">
+                <form action="{{ url_for('Sundaes')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "RaspberryRoseSundaeQTY" placeholder="Quantity">
