--- a/templates/VegSnacks.html
+++ b/templates/VegSnacks.html
@@ -260,7 +260,7 @@ html {
                 <strong>{{ error_1 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PaneerTikkaQTY" placeholder="Quantity">
@@ -287,7 +287,7 @@ html {
                     <strong>{{ error_2 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChillyPaneerQTY" placeholder="Quantity">
@@ -310,7 +310,7 @@ html {
                     <strong>{{ error_3 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "Paneer65QTY" placeholder="Quantity">
@@ -334,7 +334,7 @@ html {
                     <strong>{{ error_4 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "VegKababQTY" placeholder="Quantity">
@@ -358,7 +358,7 @@ html {
                     <strong>{{ error_5 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "PaneerManchurianQTY" placeholder="Quantity">
@@ -382,7 +382,7 @@ html {
                     <strong>{{ error_6 }}</strong>
                 </p>
 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "FalafelQTY" placeholder="Quantity">
@@ -405,7 +405,7 @@ html {
                     <strong>{{ error_7 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "SamosaQTY" placeholder="Quantity">
@@ -428,7 +428,7 @@ html {
                     <strong>{{ error_8 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "FrenchFriesQTY" placeholder="Quantity">
@@ -452,7 +452,7 @@ html {
                     <strong>{{ error_9 }}</strong>
                 </p>
                 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "MomosQTY" placeholder="Quantity">
@@ -476,7 +476,7 @@ html {
                     <strong>{{ error_10 }}</strong>
                 </p>
 
-                <form action="{{ url_for('VegSnacks')}}" method="POST">    
+                <form action="{{ url_for('VegSnacks')}}" method="POST" autocomplete="off">    
                     
                     <p>Qty</p>
                     <input type="text" class = card-text name = "ChillyPotatoQTY" placeholder="Quantity">
