--- a/templates/login.html
+++ b/templates/login.html
@@ -98,10 +98,10 @@
         <div class="loginBox">
             <img src = "https://cdn3.iconfinder.com/data/icons/essential-rounded/64/Rounded-31-512.png" class = "avatar">
                 <h1>Login here</h1>
-                <form action="{{ url_for('login')}}" method="POST">
+                <form action="{{ url_for('login')}}" method="POST" autocomplete="off">
                     <div class="msg">{{ msg }}</div>
                     <p>Username: </p>
-                    <input type="text" name = "username" placeholder="Enter Username">
+                    <input type="text" name = "username" value="{{ login }}" placeholder="Enter Username">
                     <p>Password: </p>
                     <input type="password" name = "password" placeholder="Enter password">
                     <input type="submit" value="Login">
